<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.phoebus</groupId>
  <artifactId>parent</artifactId>
  <version>4.6.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>phoebus (parent)</name>

  <scm>
    <developerConnection>scm:git:https://github.com/shroffk/phoebus</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <epics.version>7.0.4</epics.version>
    <vtype.version>1.0.1</vtype.version>
    <openjfx.version>13.0.1</openjfx.version>
    <jackson.version>2.10.1</jackson.version>
    <!--<maven.repo.local>${project.build.directory}/.m2</maven.repo.local> -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <skipITTests>true</skipITTests>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.2</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.22.0</version>
        <configuration>
          <skipITs>${skipITTests}</skipITs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
      </plugin>
    </plugins>
  </build>


  <profiles>
    <!-- The it-tests profile when used will run all integration tests, these 
      are junit test classes with names ending in "IT" -->
    <profile>
      <id>it-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
    </profile>
    <!-- The ui-tests profile when used will run all user interface tests, 
      these are testfx test where the java file names ending in "UI" -->
    <profile>
      <id>ui-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/*UI.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!-- The all-tests profile when used will run all integration and user 
      interface tests -->
    <profile>
      <id>all-tests</id>
      <properties>
        <skipITTests>false</skipITTests>
      </properties>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/*UI.java</include>
                <include>**/*IT.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!-- a profile for generating javadocs and the website from the .rst 
      files -->
    <profile>
      <id>docs</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <!-- add this to disable checking -->
                  <doclint>none</doclint>
                  <source>11</source>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
            <version>3.7.1</version>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-project-info-reports-plugin</artifactId>
            <version>3.0.0</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    <!-- A profile for preparing and releasing phoebus.
     Please refer to http://maven.apache.org/maven-release/maven-release-plugin/index.html 
      for the detailed description of the steps involved. -->
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.5.3</version>
            <configuration>
              <preparationGoals>exec:exec</preparationGoals>
              <checkModificationExcludes>
                <checkModificationExclude>**/.project</checkModificationExclude>
                <checkModificationExclude>**/.classpath</checkModificationExclude>
                <checkModificationExclude>pom.xml</checkModificationExclude>
                <checkModificationExclude>**/phoebus-target/pom.xml</checkModificationExclude>
              </checkModificationExcludes>
            </configuration>
          </plugin>

          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.6.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>exec</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <executable>hostname</executable>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <!-- The Nexus snapshot repository hosting the latest diirt modules -->
    <repository>
      <id>sonatype-nexus-snapshots</id>
      <name>sonatype-nexus-snapshots</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>

  <modules>
    <module>dependencies</module>
    <module>core</module>
    <module>app</module>
    <module>phoebus-product</module>
    <module>services</module>
  </modules>
</project>
